fix letter spacings

--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -33,7 +33,7 @@ $lh-title: 1.25;
 $lh-copy: 1.5;
 
 // Letter Spacings
-$ls-normal: 'normal';
-$ls-tracked: '0.1em';
-$ls-tight: '-0.05em';
-$ls-mega: '0.25em';
+$ls-normal: normal;
+$ls-tracked: 0.1em;
+$ls-tight: -0.05em;
+$ls-mega: 0.25em;
